--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "constants": "0.0.2",
     "crypto": "^1.0.1",
+    "fs": "0.0.1-security",
     "readline": "^1.3.0"
   }
 }
