--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "constants": "0.0.2",
     "crypto": "^1.0.1",
     "fs": "0.0.1-security",
+    "nano-time": "^1.0.0",
     "readline": "^1.3.0"
   }
 }
