--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "constants": "0.0.2",
     "crypto": "^1.0.1",
+    "express": "^4.17.1",
     "fs": "0.0.1-security",
     "nano-time": "^1.0.0",
     "readline": "^1.3.0"
